--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: deep-bi-docs_test
+title: deep-docs_test
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -26,7 +26,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 domain: deep-bi.github.io # the subpath of your site, e.g. /blog
 url: https://deep-bi.github.io # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: /deep-bi-docs/
+baseurl: /deep-docs/
 
 # Build settings
 theme: just-the-docs
