--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: deep-docs_test
+title: deep-docs-dev_test
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-domain: deep-bi.github.io # the subpath of your site, e.g. /blog
-url: https://deep-bi.github.io # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: /deep-docs/
+domain: korczyk-deep.github.io # the subpath of your site, e.g. /blog
+url: https://korczyk-deep.github.io # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: /deep-dev-docs/
 
 # Build settings
 theme: just-the-docs
