--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 domain: korczyk-deep.github.io # the subpath of your site, e.g. /blog
 url: https://korczyk-deep.github.io # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: /deep-dev-docs/
+baseurl: /deep-docs-dev/
 
 # Build settings
 theme: just-the-docs
